# sway-workspace-switcher

./: .rustfmt.toml  Cargo.toml
src/: main.rs
