[package]
name = "sway-workspace-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["process", "fs", "macros", "rt"] }
tokio-stream = { version = "0.1.11", features = ["io-util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unix-named-pipe = "0.2.0"
